--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href='https://api.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" media="screen  and (max-width: 385px)" href="css/mobileCss.css">
+    <link rel="stylesheet" type="text/css" media="screen  and (min-width: 386px) and (max-width: 600px)" href="css/laptop.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin="" />
   <title>Restaurant Reviews</title>
