--- a/index.html
+++ b/index.html
@@ -2,79 +2,77 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src='https://api.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.js'></script>
-  <link href='https://api.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css' rel='stylesheet' />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+ <script src='https://api.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css' rel='stylesheet' /> 
+  <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
-<<<<<<< HEAD
-  <link rel="stylesheet" type="text/css" media="screen  and (max-width: 695px)" href="css/mobileCss.css">
-  <link rel="stylesheet" type="text/css" media="screen  and (min-width: 696px) and (max-width: 1096px)" href="css/laptop.css">
-||||||| merged common ancestors
-  <link rel="stylesheet" type="text/css" media="screen  and (max-width: 650px)" href="css/mobileCss.css">
-    <link rel="stylesheet" type="text/css" media="screen  and (min-width: 651px) and (max-width: 1024px)" href="css/laptop.css">
-=======
-  <link rel="stylesheet" type="text/css" media="screen  and (max-width: 695px)" href="css/mobileCss.css">
-    <link rel="stylesheet" type="text/css" media="screen  and (min-width: 696px) and (max-width: 1096px)" href="css/laptop.css">
->>>>>>> 5e13c713ee86aa0260396d986d3138cb972b9107
+  <!-- Main CSS file -->
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+   <link rel="stylesheet" type="text/css" media="screen  and (max-width: 450px)" href="css/mobileCss.css">
+  <link rel="stylesheet" type="text/css" media="screen  and (min-width: 451px) and (max-width: 780px)" href="css/laptop.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin="" />
-  <title>Restaurant Reviews</title>
+  <title>Restaurant Info</title>
 </head>
 
-<body>
+<body class="inside">
 
+  <!-- Beginning header -->
   <header>
+    <!-- Beginning nav -->
     <nav>
-      <h1><a aria-label="Home" tabindex="1" href="/">Restaurant Reviews</a></h1>
+      <h1><a arial-label="Home" tabindex="1" href="/">Restaurant Reviews</a></h1>
     </nav>
+    <!-- Beginning breadcrumb -->
+    <ul id="breadcrumb">
+      <li><a tabindex="2" href="/">Home</a></li>
+    </ul>
+    <!-- End breadcrumb -->
+    <!-- End nav -->
   </header>
+  <!-- End header -->
 
+  <!-- Beginning main -->
   <main id="maincontent">
-    <section id="map-container">
+    <!-- Beginning map -->
+    <section tabindex="5" id="map-container">
       <div id="map"></div>
     </section>
-    <section>
-      <div class="filter-options">
-        <h2>Filter Results</h2>
-<<<<<<< HEAD
-        <select role="tablist" tabindex="2" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-||||||| merged common ancestors
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-=======
-        <select role="tablist" tanindex="2" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
->>>>>>> 5e13c713ee86aa0260396d986d3138cb972b9107
-          <option value="all">All Neighborhoods</option>
-        </select>
-<<<<<<< HEAD
-        <select tabindex="2" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-||||||| merged common ancestors
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-=======
-        <select role="tablist" tabindex="2" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
->>>>>>> 5e13c713ee86aa0260396d986d3138cb972b9107
-          <option value="all">All Cuisines</option>
-        </select>
-      </div>
-      <ul id="restaurants-list"></ul>
+    <!-- End map -->
+    <!-- Beginning restaurant -->
+    <section tabindex="3" id="restaurant-container">
+      <h1 id="restaurant-name"></h1>
+      <img id="restaurant-img">
+      <p id="restaurant-cuisine"></p>
+      <p id="restaurant-address"></p>
+      <table id="restaurant-hours"></table>
     </section>
+    <!-- end restaurant -->
+    <!-- Beginning reviews -->
+    <section tabindex="4" id="reviews-container">
+      <ul id="reviews-list"></ul>
+    </section>
+    <!-- End reviews -->
   </main>
+  <!-- End main -->
+
+  <!-- Beginning footer -->
+  <footer id="footer">
+    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+  </footer>
+  <!-- End footer -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""></script>
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-<<<<<<< HEAD
-  <script type="application/javascript" charset="utf-8" src="js/sw_register.js"></script>
-||||||| merged common ancestors
-=======
-<script type="application/javascript" charset="utf-8" src="js/sw_register.js"></script>
->>>>>>> 5e13c713ee86aa0260396d986d3138cb972b9107
-  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
-
-
-  <footer id="footer">
-    Copyright (c) 2017 <a href="restaurant.html"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-  </footer>
+  <!-- Beginning scripts -->
+  <!-- Database helpers -->
+  <script type="text/javascript" src="js/dbhelper.js"></script>
+  <!-- Main javascript file -->
+  <script type="text/javascript" src="js/restaurant_info.js"></script>
+   <script type="text/javascript" charset="utf-8" src="js/sw_register.js"></script>
+  <!-- Google Maps -->
+  <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
+  <!-- End scripts -->
 
 </body>
 
