--- a/index.html
+++ b/index.html
@@ -16,27 +16,29 @@
 
 <body>
 
-  <header>
+<header tabindex="0">
     <nav>
-      <h1><a aria-label="Home" tabindex="1" href="/">Restaurant Reviews</a></h1>
+      <h1><a aria-label="Home" href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
-  <main id="maincontent">
+  <main id="maincontent" tabindex="1" aria-label="Main content">
     <section id="map-container">
       <div id="map"></div>
     </section>
-    <section>
+    <section tabindex="2">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select role="tablist" tabindex="2" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select tabindex="2" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <label for="neighborhoods-select">neighborhoods-select</label>
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
+        <label for="cuisines-select">cuisines-select</label>
       </div>
-      <ul id="restaurants-list"></ul>
+      <ul id="restaurants-list" ></ul>
     </section>
   </main>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
