--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,21 +22,21 @@
     </nav>
   </header>
 
-  <main id="maincontent" tabindex="1" aria-label="Main content">
+  <main id="maincontent" tabindex="0" aria-label="Main content">
     <section id="map-container">
       <div id="map"></div>
     </section>
-    <section tabindex="2">
+    <section tabindex="0">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <label for="neighborhoods-select">neighborhoods-select</label>
+        <!--<br><label for="neighborhoods-select">neighborhoods-select</label><br>-->
         <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
-        <label for="cuisines-select">cuisines-select</label>
+       <!-- <label for="cuisines-select">cuisines-select</label>-->
       </div>
       <ul id="restaurants-list" ></ul>
     </section>
