--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,11 +22,11 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a arial-label="Home" tabindex="1" href="/">Restaurant Reviews</a></h1>
+      <h1><a arial-label="Home" tabindex="0" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb">
-      <li><a tabindex="2" href="/">Home</a></li>
+      <li><a tabindex="0" href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -34,14 +34,14 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent" tabindex="3">
+  <main id="maincontent" tabindex="0">
     <!-- Beginning map -->
-    <section tabindex="6" id="map-container" aria-label="Map area" role="application">
+    <section tabindex="0" id="map-container" aria-label="Map area" role="application">
       <div id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-<section id="restaurant-container" tabindex="4" aria-label="Restaurant Information">
+<section id="restaurant-container" tabindex="0" aria-label="Restaurant Information">
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
@@ -50,7 +50,7 @@
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-<section id="reviews-container" tabindex="5" aria-label="Reviews">
+<section id="reviews-container" tabindex="0" aria-label="Reviews">
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
@@ -58,7 +58,7 @@
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer" tabindex="7">
+  <footer id="footer" tabindex="0">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
