--- a/restaurant.html
+++ b/restaurant.html
@@ -25,7 +25,7 @@
       <h1><a arial-label="Home" tabindex="0" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb">
+    <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
       <li><a tabindex="0" href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -42,7 +42,7 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
 <section id="restaurant-container" tabindex="0" aria-label="Restaurant Information">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
